# mini_chat

./: Cargo.toml  LICENSE  README.md
src/: connection.rs  lib.rs  message.rs  user.rs
src/client/: client.rs  mod.rs
src/server/: mem.rs  mod.rs  server.rs
